fixing send button mobile

--- a/small.css
+++ b/small.css
@@ -196,9 +196,8 @@
 }
 
 #formBottom #sendContainer button {
-  background-color: red;
-  width: 2em !important;
-  height: 2em !important;
+  width: 3em !important;
+  height: 3em !important;
   margin-left: 0.2em;
 }
 
